<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MessageMaster</string>
    <string name="timing_message">定时短信</string>
    <string name="action_settings">Settings</string>
    
    <string name="log">记录</string>
    <string name="setting">设置</string>
	<string name="msg_task_add">添加</string>
	<string name="msg_task_list_edit">编辑</string>
	
	
	<string name="task_message_item_datetime">发送时间</string>
	<string name="task_message_item_to_who">发送给</string>
	<string name="task_message_item_to_who_hint">某人</string>
	<string name="task_message_item_cont_brief">内容简述</string>
	<string name="task_message_item_cont_brief_hint">定时短信的简要内容</string>
	
	
	<string name="task_message_item_edit_btn">编辑</string>
	<string name="task_message_item_del_btn">删除</string>
	
	
	<string name="edit_msg_time_default">发送时间:某年某月某天</string>
	<string name="edit_msg_to_who_default">发送给:某人</string>
	<string name="edit_msg_content_default_hint">短信内容</string>
	
	
	<string name="readme">
	    MessageMaster\nMessageMaster\nMessageMaster\nMessageMaster\nMessageMaster\nMessageMaster\n
	    MessageMaster\nMessageMaster\nMessageMaster\nMessageMaster\n
	  	    MessageMaster\nMessageMaster\nMessageMaster\nMessageMaster\nMessageMaster\nMessageMaster\n
	    MessageMaster\nMessageMaster\nMessageMaster\nMessageMaster\n
	    
	    </string>
	
</resources>
