<?xml version="1.0" encoding="utf-8"?>
<com.asher.messagemaster.SlideViewItem
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
     xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
     android:background="#fff"
     android:overScrollMode="never"
     android:scrollbars="none"
     android:fillViewport="false"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/task_message_item_base_content"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
             >
            <com.beardedhen.androidbootstrap.FontAwesomeText
                android:id="@+id/task_message_item_active_toggle"
                android:layout_width="35dip"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
    			fontawesometext:fa_icon="fa-circle-o"
    			android:layout_margin="10dp" 
    			android:textSize="28sp"
    			android:textColor="#2E8AF2"
    			android:layout_marginTop="15dip"
			/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3" >

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/task_message_item_datetime" />

                    <TextView
                        android:id="@+id/task_message_item_datetime"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3" >

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/task_message_item_to_who" />

                    <TextView
                        android:id="@+id/task_message_item_to_who"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/task_message_item_to_who_hint" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/msg_content_brief"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/task_message_item_cont_brief"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/task_message_item_cont_brief_hint" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

   <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/task_message_item_edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        bootstrap:bb_icon_left="fa-edit"
        android:textSize="20sp"
        bootstrap:bb_type="info"
        android:text="@string/task_message_item_edit_btn"
   />
   
   <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/task_message_item_del_btn"
        android:layout_width="wrap_content"
        bootstrap:bb_icon_left="fa-trash-o"
		bootstrap:bb_type="danger"
		android:textSize="20sp"
        android:layout_height="match_parent"
        android:text="@string/task_message_item_del_btn" />
   
</LinearLayout>
    
    
</com.asher.messagemaster.SlideViewItem>


